Name:                learny
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable learny
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    bytestring,
    heist,
    MonadCatchIO-transformers,
    mtl,
    transformers,
    snap,
    snap-core,
    snap-server,
    snap-loader-static,
    persistent,
    snaplet-persistent,
    text,
    time,
    xmlhtml,
    base,
    lens,
    cond,
    mime-mail,
    esqueleto,
    string-conversions

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans
